CL Generation, SONAR refactor